app/assets/stylesheets/zammad.scss
/* ... */
.tags,
.links,
.time-units,
.link_kb_answers {
  margin: 20px 0;
}

.tags {
  margin-top: 10px;
}

.userNotifications label + .btn {
  margin-top: 1px;
}

.list {
  padding: 0;
  margin-bottom: 5px;
}

.list-title {
  margin-top: 7px;
  margin-bottom: 4px;
  text-transform: uppercase;
  color: var(--ghost-color);
  display: block;
  font-size: 12px;
  font-weight: normal;
  letter-spacing: 0.05em;
}

.list-item {
  display: flex;
  align-items: center;
  border-bottom: 1px solid var(--background-modifier-border);
}

.list-item-name {
  flex: 1;
  padding: 4px 1px;
}

.list-item-delete {
  padding: 0 10px;

  @include bidi-style(margin-right, -3px, margin-left, 0);

  display: flex;
  align-items: center;
  justify-content: center;
  align-self: stretch;

  @extend .u-clickable;

  .icon {
    width: 9px;
    height: 9px;
    fill: var(--interactive-muted);
  }
}

.list-item-delete:hover .icon {
  fill: hsl(1, 77%, 47%);
}

li.list-item-none {
  list-style-type: none;
}

.ticket-id {
  color: var(--text-inverted);
  background: var(--interactive-muted-alt);
  font-size: 11px;
  border-radius: 7px;
  padding: 0 5px;

  @include bidi-style(margin-right, 2px, margin-left, 0);
}

.aiAgent-popover {
  &-title {
    padding-bottom: 8px;
  }
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.attributeBar {
  background: var(--background-secondary);
  transition: margin 250ms;
  flex-shrink: 0;
  border-top: 1px solid var(--border);

  &.is-closed {
    margin-bottom: -60px;
  }

  @include phone {
    &-reset {
      flex-shrink: 5;
    }

    .btn,
    .buttonDropdown {
      min-width: 20px;

      &--only-icon {
        min-width: 36px;
      }
    }
  }

  &-inner {
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    padding: 10px;
  }

  &-avatars {
    margin-right: 10px;
  }

  .aiAgent {
    &-outer {
      margin-inline-end: 10px;
      position: relative;
      padding: 2px;
      border-radius: 100%;
      width: 40px;
      height: 40px;
      display: flex;
      flex-shrink: 0;
      border: 1px solid transparent;
      background-clip: border-box;
      isolation: isolate;

      &::before {
        content: '';
        position: absolute;
        border-radius: 100%;
        z-index: -1;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: 100%;
        height: 100%;
        background: linear-gradient(to right, var(--ai-assist-blue), var(--ai-assist-pink));
        animation: 2s rotate infinite linear;
      }

      @include phone {
        width: 30px;
        height: 30px;
      }

      .icon {
        fill: var(--text-inverted);
      }
    }

    &-inner {
      border-radius: 100%;
      background: var(--background-primary);
      padding: 4px;

      .icon-ai-agent {
        width: 100%;
        height: 100%;
        fill: var(--ai-assist-blue);
      }
    }
  }

  &-draft-spacer {
    width: 1px;
    height: 60px;
    margin-right: 15px;
    background: var(--background-modifier-accent);
  }

  &-avatars:empty + &-draft-spacer {
    display: none;
  }

  &--border {
    border-top: 1px solid var(--border);
  }

  &--spacer-after {
    margin-right: auto;
  }
}

.newTicket {
  padding: 14px 34px;

  @include phone {
    padding: 0;
  }
}

.newTicket .sidebar {
  width: 290px;
}

.newTicket .form-control {
  border-color: var(--border);

  &:focus,
  &.focus {
    border-color: var(--border-highlight);
  }
}

.newTicket .article-form-top {
  margin-top: 15px;
}

.newTicket--chatTicket {
  flex: 1;
  display: flex;
  padding: 0;
  height: 100%;

  & > .icon {
    position: absolute;
    top: 50%;
    transform: translateY(-50%) translateX(-50%);
  }

  & > .box {
    width: calc(50% - 47px);
    margin: 34px;
  }

  .chatHistory {
    display: flex;
    flex-direction: column;
  }

  .boxFade {
    width: 94px;
    top: 34px;
    height: 100%;
    position: absolute;

    @include bidi-style(margin-left, -34px, margin-right, 0);

    z-index: 1;
  }
}

.box {
  background: var(--background-secondary);
  margin: 20px 0;
  border: 1px solid var(--border);
  padding: 20px 24px;
}

.box.box--newTicket {
  max-width: 1080px;
  margin-left: auto;
  margin-right: auto;

  @include phone {
    margin: 0;
    border: none;
    padding: 15px;
  }
}

.box .page-header {
  text-align: center;
  margin-bottom: 12px;
}

.box--paper {
  background-image: linear-gradient(transparent 30px, var(--background-modifier-border) 31px);
  background-size: 100% 31px;
  line-height: 31px;
  padding-top: 31px;
  padding-bottom: 31px;

  h1,
  h2,
  h3 {
    margin: 0;
    line-height: inherit;
  }

  h3:not(:first-child) {
    margin-top: 31px;
  }
}

.box h1 {
  margin-top: 10px;
  margin-bottom: 12px;
  color: var(--text-normal);
  flex: 1;
}

.box h2 {
  margin-top: 12px;
}

.box .two-columns {
  margin-left: -4px;
  margin-right: -4px;
}

.box .two-columns .column {
  margin-left: 4px;
  margin-right: 4px;
  width: calc(50% - 8px);

  @include phone {
    width: auto;
  }
}

.box-controls {
  margin-top: 20px;
  display: flex;
  align-items: center;
}

.box--yellow {
  background: hsl(47, 100%, 93%);
  border-color: hsl(47, 100%, 75%);
  color: hsl(47, 20%, 67%);

  h1,
  h2 {
    color: hsl(47, 3%, 28%);
  }
}

.box-progress {
  display: flex;
  align-items: center;
  justify-content: center;
}

.box-progress-title {
  color: hsl(47, 3%, 28%);
}

.box-progress-body {
  flex: 1;

  @include bidi-style(margin-left, 24px, margin-right, 0);

  display: flex;
  align-items: center;
  justify-content: center;

  progress {
    width: 100%;
  }
}

.horizontal > .box {
  margin-top: 4px;
  margin-bottom: 4px;

  & + .box {
    border-left-width: 0;
  }
}

.formset-inset {
  margin: 34px -24px 24px;
  padding: 19px 24px 24px;
  background: var(--background-primary-alt);
  border-top: 1px solid var(--border);
  border-bottom: 1px solid var(--border);
}
/* ... */

